# cat

./: .gitignore  Cargo.toml  FEATURES.md  note  remove_comments.sh  run-uefi.sh  rust-cleaner.sh
.cargo/: config.toml
kernel/: Cargo.toml  linker.ld
kernel/src/: elf_loader.rs  gdt.rs  heap_allocator.rs  interrupts.rs  layout.rs  main.rs  pml4.rs  pmm.rs  screen.rs  spinlock.rs  syscalls.rs  writer.rs
shared/: Cargo.toml
shared/src/: framebuffer.rs  helpers.rs  lib.rs  panic.rs  serial.rs
uefi_boot/: Cargo.toml
uefi_boot/src/: main.rs
user_space/: hello.rs  hello_simple  hello_simple.S  hello_simple_pie
