[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared", features = ["serial"] }
x86_64 = "0.15.4"
linked_list_allocator = "0.10.5"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
pic8259 = "0.11.0"
spin = "0.10.0"
pc-keyboard = "0.8.0"
font8x8 = { version = "0.3.1", default-features = false, features = ["unicode"] }
xmas-elf = "0.10.0"